--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 compile.on.save=true
 do.jlink=false
 jlink.strip=false
-user.properties.file=/Users/ili/Library/Application Support/NetBeans/19/build.properties
+user.properties.file=C:\\Users\\peter\\AppData\\Roaming\\NetBeans\\21\\build.properties
